# TCM-Agent

./: --ignore-file  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE_CODE_PATTERNS.md  CONTRIBUTING.md  README.md  README.zh-CN.md  ROADMAP.md  TCM-AGENT.md  TCM-ARCHITECTURE.md  USAGE.md  package-lock.json
tcm-mcp-server/: pyproject.toml
tcm-mcp-server/data/: tcm.db
tcm-mcp-server/data/chroma/: chroma.sqlite3
tcm-mcp-server/src/tcm_mcp_server/: __init__.py  server.py
tcm-mcp-server/src/tcm_mcp_server/data/: __init__.py  batch_import_db.py  build_chroma.py  database.py  import_sqlite.py  normalize_markdown.py  parse_formula_xlsx.py  parse_herb_xlsx.py  parse_herbs.py  parse_tcmbank_xlsx.py  review_queue.py  schema.py  seed_acupoints.py  seed_herbs.py  seed_prescriptions.py  seed_syndromes.py  validate_records.py
tcm-mcp-server/src/tcm_mcp_server/models/: __init__.py  acupoint.py  herb.py  (+3 more)
tcm-mcp-server/tests/: __init__.py  conftest.py
tcm-mcp-server/tests/datasets/: drug_interaction.json  herb_query.json  rag_prescription_eval.json  rag_syndrome_eval.json
tcm-mcp-server/tests/ingestion/: test_import_sqlite.py  test_markdown_normalize.py  test_parse_herbs.py  test_review_queue.py  test_source_traceability.py  test_validate_records.py
tcm-mcp-server/tests/integration/: test_mcp_stdio.py
tcm-mcp-server/tests/rag/: __init__.py  evaluation_report.md  generate_report.py  lite_vector_store.py  metrics.py  test_rag_prescription.py  test_rag_syndrome.py
tcm-mcp-server/tests/safety/: test_drug_interaction.py
tcm-mcp-server/tests/unit/: test_search_herb.py
(+63 files in other folders)
