[project]
name = "tcm-mcp-server"
version = "0.1.0"
description = "中医药数据引擎 MCP Server — 提供结构化查询与 RAG 语义检索能力"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-html>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
